remove programs/submit endpoint
